--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,8 @@
 <nav>
     <div class="nav-wrapper">
-      <a href="#" class="brand-logo">Logo</a>
+      <a href="#" class="brand-logo" style="padding-left: 15px;">Keyword Factory</a>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
         <li><a routerLink='allkeywords' routerLinkActive=''>All Keywords</a></li>
-        <li><a routerLink='keyworddetails' routerLinkActive=''>Keyword Details</a></li>
       </ul>
     </div>
 </nav>
