--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,51 @@
-/* You can add global styles to this file, and also import other style files */
+.center-content {
+    display: flex; 
+    justify-content: center;
+    align-items: center;
+}
+
+.center-content-space-between {
+    display: flex; 
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.h-100 {
+    height: 100vh;
+}
+
+.h-90 {
+    height: 90vh;
+}
+
+.p-1 {
+    padding: 0.5rem
+}
+.p-2 {
+    padding: 1rem
+}
+.p-3 {
+    padding: 1.5rem
+}
+.p-4 {
+    padding: 2rem
+}
+.p-5 {
+    padding: 2.5rem
+}
+
+.m-1 {
+    margin: 0.5rem
+}
+.m-2 {
+    margin: 1rem
+}
+.m-3 {
+    margin: 1.5rem
+}
+.m-4 {
+    margin: 2rem
+}
+.m-5 {
+    margin: 2.5rem
+}
