--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,7 @@
       <a href="#" class="brand-logo" style="padding-left: 15px;">Keyword Factory</a>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
         <li><a routerLink='allkeywords' routerLinkActive=''>All Keywords</a></li>
+        <li><a routerLink='addnew' routerLinkActive=''>Keyword Details</a></li>
       </ul>
     </div>
 </nav>
