--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
 <nav>
-    <div class="nav-wrapper">
+    <div class="nav-wrapper teal lighten-2">
       <a href="#" class="brand-logo" style="padding-left: 15px;">Keyword Factory</a>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
-        <li><a routerLink='allkeywords' routerLinkActive=''>All Keywords</a></li>
-        <li><a routerLink='addnew' routerLinkActive=''>Keyword Details</a></li>
+        <li><a routerLink='allkeywords' routerLinkActive='teal lighten-3'>All Keywords</a></li>
+        <li><a routerLink='addnew' routerLinkActive='teal lighten-3'>Add New</a></li>
       </ul>
     </div>
 </nav>
