--- a/src/styles.css
+++ b/src/styles.css
@@ -10,6 +10,15 @@
     align-items: center;
 }
 
+.roboto {
+    font-family: 'Roboto', sans-serif;
+}
+
+a {
+    color:inherit;
+    text-decoration: none;
+}
+
 .h-100 {
     height: 100vh;
 }
