--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,11 @@
 <nav>
-    <div class="nav-wrapper teal lighten-2">
+    <div class="nav-wrapper deep-orange lighten-1">
       <a href="#" class="brand-logo" style="padding-left: 15px;">Keyword Factory</a>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
-        <li><a routerLink='allkeywords' routerLinkActive='teal lighten-3'>All Keywords</a></li>
-        <li><a routerLink='addnew' routerLinkActive='teal lighten-3'>Add New</a></li>
+        <li><a routerLink='allkeywords' routerLinkActive='teal lighten-2'>All Keywords</a></li>
+        <li><a routerLink='addnew' routerLinkActive='teal lighten-2'>Add New</a></li>
+        <li><a href='https://cafeamericano.github.io/appGalleryLite/' target="_blank">App Gallery</a></li>
+        <li><a href='https://cafeamericano.github.io/appFactory/#/' target="_blank">App Factory</a></li>
       </ul>
     </div>
 </nav>
